# azoth

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  THIRD_PARTY_LICENSES.txt
.github/workflows/: cmake-multi-platform.yml
Process/: CMakeLists.txt  CProcess.hpp  CSystem.hpp
Process/Core/: MemoryBlock.cpp  MemoryBlock.hpp  MemoryCopy.cpp  MemoryCopy.hpp  MemoryRegion.hpp  PointerEndpoint.cpp  PointerEndpoint.hpp  ProcessImage.hpp
Process/Platform/: EPlatformError.hpp  IPlatformLink.hpp
Process/Platform/Linux/: LinuxApiLink.hpp
Process/Platform/Linux/Utility/: LinuxProcess.cpp  LinuxProcess.hpp  PTrace.hpp
Process/Platform/Template/: TemplateLink.hpp
Process/Platform/Windows/: WinapiLink.hpp
Process/Platform/Windows/Utility/: SmartHandle.hpp  WStringUtil.hpp  WinProcess.cpp  WinProcess.hpp  WinTypes.hpp
Process/ProcessModules/: CDecoderModule.cpp  CDecoderModule.hpp  CMemoryModule.cpp  CMemoryModule.hpp  CScannerModule.cpp  CScannerModule.hpp  CSymbolModule.cpp  CSymbolModule.hpp
Process/Types/: Address.hpp  EMemoryProtection.hpp  EMemoryState.hpp  EMemoryType.hpp  EProcessArchitecture.hpp  EProcessPrivilegeLevel.hpp  MemoryRange.hpp  Pattern.hpp
Process/Utility/: MemIn.hpp
examples/: CMakeLists.txt  example_basic.cpp  example_custom_layer.cpp  example_memory1.cpp  example_memory2.cpp  example_scanner.cpp
tests/: CMakeLists.txt  main.cpp
tests/Process/ProcessModules/: test_cmemory_module.cpp  test_cscanner_module.cpp
tests/Process/Types/: test_address.cpp  test_memory_range.cpp  test_pattern.cpp
